--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,7 @@ jobs:
       - run:
           name: docker build and push
           command: |
-            DOCKERHUB_USER=objectrocket make build
-            DOCKERHUB_USER=objectrocket make publish
+            make UPDATE_LATEST=false DOCKERHUB_USER=objectrocket WEAVE_VERSION=${CIRCLE_TAG} PUBLISH_WEAVEDB=false all publish
 workflows:
   version: 2
   # runs on version tags
